<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".TwoMobileForCompareActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/compare_image"
        android:layout_marginBottom="200dp"
        />

    <EditText
        android:id="@+id/firstMobileName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edit_text_height"
        android:layout_margin="@dimen/login_component_margin"
        android:background="@drawable/rounded_text"
        android:gravity="center"
        android:hint="@string/firstMobileHint" />

    <EditText
        android:id="@+id/secondMobileName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edit_text_height"
        android:layout_margin="@dimen/login_component_margin"
        android:background="@drawable/rounded_text"
        android:gravity="center"
        android:hint="@string/secondMobileHint" />

    <Button
        android:id="@+id/btnCompare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_component_margin"
        android:background="@drawable/round_button"
        android:text="@string/compare" />



</LinearLayout>