<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txtInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:padding="20dp"
            android:paddingTop="20dp"
            android:text="@string/information" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_light_background"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobileBuy"
                android:paddingBottom="@dimen/home_text_padding"
                android:textSize="@dimen/home_icon_font_size" />

            <Button
                android:id="@+id/btnMobile"
                android:layout_width="200dp"
                android:layout_height="@dimen/home_button_height"
                android:layout_marginBottom="30dp"
                android:background="@drawable/mobile_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accessoryBuy"
                android:paddingBottom="@dimen/home_text_padding"
                android:textSize="@dimen/home_icon_font_size" />

            <Button
                android:id="@+id/btnAccessory"
                android:layout_width="@dimen/home_button_width"
                android:layout_height="@dimen/home_button_height"
                android:layout_marginBottom="30dp"
                android:background="@drawable/accessory_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assetCompare"
                android:paddingBottom="@dimen/home_text_padding"
                android:textSize="@dimen/home_icon_font_size" />

            <Button
                android:id="@+id/btnCompare"
                android:layout_width="@dimen/home_button_width"
                android:layout_height="@dimen/home_button_height"
                android:layout_marginBottom="30dp"
                android:background="@drawable/compare_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yourBasket"
                android:paddingBottom="@dimen/home_text_padding"
                android:textSize="@dimen/home_icon_font_size" />

            <Button
                android:id="@+id/btnYourBasket"
                android:layout_width="@dimen/home_button_width"
                android:layout_height="@dimen/home_button_height"
                android:layout_marginBottom="30dp"
                android:background="@drawable/baskket_image" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>