<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp"
        android:background="@drawable/login_background"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_person_image"
            />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_text_height"
            android:layout_margin="@dimen/login_component_margin"
            android:background="@drawable/rounded_text"
            android:gravity="center"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_text_height"
            android:layout_margin="@dimen/login_component_margin"
            android:background="@drawable/rounded_text"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="numberPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/login_component_margin"
            android:background="@drawable/round_button"
            android:text="@string/log_in" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>